--- a/css/style2.css
+++ b/css/style2.css
@@ -208,7 +208,9 @@ ul.dropdown-menu li.dropdown-border {
     width: 100%;
     background: #eee;
     height: 684px;
+    margin-bottom: 4px;
     border: 1px solid #ddd;
+    height: 688px;
 }
 .section-header {
 	background: #5bc0de;
@@ -252,6 +254,7 @@ button.dropbtn .glyphicon-option-vertical:hover {
 .dropdown {
     position: absolute;
     display: inline-block;
+    margin-left: 2px;
 }
 .dropdown-content {
     display: none;
@@ -450,7 +453,7 @@ span.badge .glyphicon-ok {
 .social-network {
 	display: flex;
 	justify-content: flex-end;
-	margin-bottom: -1%;
+	margin-bottom: -3%;
     margin-top: 1%;
 }
 .number-like {
@@ -470,6 +473,7 @@ span.badge .glyphicon-ok {
 	justify-content: flex-end;
 	position: relative;
 	padding: 10px;
+	margin-right: -64px;
 }
 .like-icon {
 	position: absolute;
@@ -480,9 +484,10 @@ span.badge .glyphicon-ok {
 	display: flex;
 	justify-content: flex-end;
 	position: relative;
-	padding: 10px;	
+	padding: 10px;
+	margin-right: 45px;	
 }
-.seven {
+#seven {
 	text-align: center;
 	font-size: 15px;
 	position: absolute;
@@ -624,13 +629,13 @@ input[type=text1], select {
    	flex-wrap: wrap;
     max-width: 743px;
     width: 100%;
-    margin-bottom: 35px;
+    margin-bottom: 4px;
 }
 .section-second {
 	max-width: 740px;
     width: 100%;
     background: #eee;
-    height: 830px;
+    height: 834px;
     border: 1px solid #ddd;
 }
 .section-header-second {
@@ -661,7 +666,7 @@ input[type=text1], select {
 button.dropbtn-second {
     background-color: #5bc0de;
     color: white;
-    padding-top: 25px;
+    padding-top: 24px;
     padding-bottom: 22px;
     padding-left: 8px;
     padding-right: 15px; 
@@ -1346,6 +1351,7 @@ ul.navbar-right li a:hover {
 .aside {
     margin-bottom: 16px;
     height: 230px;
+    margin-top: 20px;
 }	
 .sidebar-bottom {
 	display: flex;
@@ -1356,6 +1362,7 @@ ul.navbar-right li a:hover {
 .aside-second {
 	margin-bottom: 16px;
 	height: 230px;
+	margin-top: 20px;
 }
 .img-lookbook {
 	display: flex;
@@ -1413,6 +1420,9 @@ ul.navbar-right li a:hover {
 .row-place .col-xs-12 img {
 	padding-right: 7px;
 }
+.section-container-second {
+	margin-bottom: 6px;
+}
 }
 
 @media only screen and (min-width: 700px) and (max-width: 749px) {
@@ -1431,6 +1441,7 @@ ul.navbar-right li a:hover {
 .aside {
     margin-bottom: 16px;
     height: 230px;
+    margin-top: 20px;
 }	
 .sidebar-bottom {
 	display: flex;
@@ -1441,6 +1452,7 @@ ul.navbar-right li a:hover {
 .aside-second {
 	margin-bottom: 16px;
 	height: 230px;
+	margin-top: 20px;
 }
 .img-lookbook {
 	display: flex;
@@ -1498,6 +1510,9 @@ ul.navbar-right li a:hover {
 .row-place .col-xs-12 img {
 	padding-right: 7px;
 }
+.section-container-second {
+	margin-bottom: 9px;
+}
 }
 
 @media only screen and (min-width: 650px) and (max-width: 699px) {
@@ -1516,6 +1531,7 @@ ul.navbar-right li a:hover {
 .aside {
     margin-bottom: 16px;
     height: 230px;
+    margin-top: 20px;
 }	
 .sidebar-bottom {
 	display: flex;
@@ -1526,6 +1542,7 @@ ul.navbar-right li a:hover {
 .aside-second {
 	margin-bottom: 16px;
 	height: 230px;
+	margin-top: 20px;
 }
 .img-lookbook {
 	display: flex;
@@ -1583,6 +1600,9 @@ ul.navbar-right li a:hover {
 .row-place .col-xs-12 img {
 	padding-right: 7px;
 }
+.section-container-second {
+	margin-bottom: 9px;
+}
 }
 
 @media only screen and (max-width: 650px) {
@@ -1592,12 +1612,14 @@ ul.navbar-right li a:hover {
     width: 100%;
     height: 230px;
     margin-bottom: 16px;
+    margin-top: 20px;
 }
 .aside-second {
 	max-width: 650px;
     width: 100%;
     height: 230px;
     margin-bottom: 16px;
+    margin-top: 20px;
 }
 .img-lookbook {
 	display: flex;
@@ -1655,6 +1677,9 @@ ul.navbar-right li a:hover {
 .row-place .col-xs-12 img {
 	padding-right: 7px;
 }
+.section-container-second {
+	margin-bottom: 9px;
+}
 }
 
 @media only screen and (max-width: 600px) {
@@ -1676,11 +1701,167 @@ ul.navbar-right li a:hover {
 	width: 100%;
 	height: 230px;
 }
+.section-container-second {
+	margin-bottom: 7px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}
+}
+
+@media only screen and (min-width: 600px) and (max-width: 610px) {
+
+.section {
+	margin-bottom: 5px;
+}
+.section-container-second {
+	margin-bottom: 28px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}
+}
+
+@media only screen and (min-width: 550px) and (max-width: 599px) {
+
+.section {
+	margin-bottom: 24px;
+}
+.section-container-second {
+	margin-bottom: 28px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}	
+}
+
+@media only screen and (min-width: 500px) and (max-width: 549px) {
+
+.section {
+	margin-bottom: 24px;
+}
+.section-container-second {
+	margin-bottom: 28px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}
+}
+
+@media only screen and (min-width: 470px) and (max-width: 499px) {
+
+.section {
+	margin-bottom: 24px;
+}
+.section-container-second {
+	margin-bottom: 29px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}	
+}
+
+@media only screen and (min-width: 460px) and (max-width: 469px) {
+
+.section {
+	margin-bottom: 24px;
+}
+.section-container-second {
+	margin-bottom: 45px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}	
+}
+
+@media only screen and (min-width: 450px) and (max-width: 460px) {
+
+.section {
+	margin-bottom: 43px;
+}
+.section-container-second {
+	margin-bottom: 45px;
+}
+.aside {
+	margin-top: 20px;
+}
+.aside-second {
+	margin-top: 20px;
+}	
 }
 
 
+/*JavaScript*/
 
+.single-message {
+	background: #ddd;
+	max-width: 740px;
+	width: 100%;
+	min-height: 72px;
+	word-wrap: break-word;
+	margin-bottom: 2px;
+	border: 1px solid #d4d8da;
+}
+.single-message img {
+	border-radius: 50%;
+	border: 3px solid white;
+	margin: 5px 5px 5px 15px;
+}
+.border-woman1 {
+	text-align: center;
+    position: absolute;
+    height: 31px;
+    width: 68px;
+    border-radius: 0 0 90px 90px;
+    border: 3px solid rgb(6,115,207);
+    margin-top: 35px;
+    float: left;
+    margin-left: 12px;
+    border-top: none;
+}
+.single-message p {
+	padding-left: 90px;
+	margin-top: -60px;
+	width: 95%;
+}
+span.date {
+	padding-top: 40px;
+	margin-left: 89px;
+}
 
+/*
+.single-message {
+	background: #d4d8da;
+	margin-top: 2px;
+	display:flex;
+	justify-content:flex-start;
+	position:relative;
+}
+.single-message img {
+	padding: 5px;
+}
+.single-message p {
+	padding-left: 70px;
 
-
-
+}
+span.date {
+	padding-top: 40px;
+}
